--- a/public/assets/css/blocks.css
+++ b/public/assets/css/blocks.css
@@ -795,7 +795,7 @@ a:active {
   line-height: 1;
   display: inline-block;
   z-index: 1;
-  bottom: 3px;
+  /* bottom: 3px; */
 }
 .link--with-decoration .woox-icon {
   width: 24px;
@@ -1206,7 +1206,7 @@ a:active {
 .btn-prev .woox-icon {
   width: 40px;
   height: 40px;
-  fill: #c3c9d4;
+  fill: #000;
   transition: all 0.3s ease;
   display: block;
 }
@@ -1401,8 +1401,9 @@ a:active {
 }
 .time-line-slides .swiper-slide.time-active a {
   background-color: #00ffb3;
-  border-color: #00ffb3;
+  border-color: #000;
   color: #000;
+  font-weight: bold;
 }
 .time-line-slides .swiper-slide.time-active a:before {
   opacity: 1;
@@ -1410,30 +1411,34 @@ a:active {
 .time-line-slides .swiper-slide.time-active a:hover {
   background-color: #00ffb3;
   border-color: #00ffb3;
+  color: #000;
   box-shadow: inset 2px 4px 0 0 transparent, 2px 4px 0 0 transparent;
+  transform: scale(1.2);
 }
 .time-line-slides .swiper-slide.visited .time-line-decoration {
   background-color: #00ffb3;
 }
 .time-line-slides .swiper-slide.visited a {
-  background-color: transparent;
-  border-color: #00ffb3;
+  background-color: #00ffb3;
+  border-color: transparent;
   color: #000;
+  font-weight: bold;
 }
 .time-line-slides .swiper-slide.visited a:hover {
   box-shadow: inset 2px 4px 0 0 transparent, 2px 4px 0 0 transparent;
 }
 .time-line-slides a {
-  padding: 11px;
-  line-height: 1;
-  border: 3px solid #3D434F;
-  border-radius: 50px;
-  transition: all 0.3s ease;
-  margin: 0 0 0 8px;
-  max-width: 140px !important;
-  position: relative;
-  text-align: center;
-  background-color: #fff;
+  padding: 17px;
+    line-height: 1;
+    border: 4px solid #3D434F;
+    border-radius: 0px;
+    transition: all 0.3s ease;
+    margin: 0 0 0 8px;
+    max-width: 140px !important;
+    position: relative;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 3px 4px 0 0 #00ffb3;
 }
 .time-line-slides a:before {
   content: "";
@@ -1455,6 +1460,7 @@ a:active {
 .time-line-slides a:hover {
   color: #3D434F;
   box-shadow: inset 2px 4px 0 0 #00ffb3, 2px 4px 0 0 #00ffb3;
+  transform: scale(1.2);
 }
 .time-line-slides a:active {
   background-color: #00ffb3;
@@ -1476,7 +1482,7 @@ a:active {
   display: inline-block;
   height: 4px;
   border-radius: 5px;
-  background-color: #e8edf6;
+  background-color: #000;
   transition: all 0.3s ease;
   position: relative;
   width: 100%;
@@ -3685,7 +3691,11 @@ select:disabled, .select2:disabled {
   background-color: #fff;
   border-radius: 0px;
   margin-bottom: 10px;
-  box-shadow: 15px 0 40px 0 rgba(61, 67, 79, 0.08);
+  box-shadow: 3px 4px 0 0 #000 !important;
+}
+
+.accordion-panel:hover {
+  opacity: .8;
 }
 
 .accordion-heading {
@@ -3712,7 +3722,7 @@ select:disabled, .select2:disabled {
 .accordion-heading .icons .woox-icon {
   height: 17px;
   width: 17px;
-  fill: #000;
+  fill: #000 !important;
 }
 
 
@@ -3750,8 +3760,8 @@ select:disabled, .select2:disabled {
   color: #00ffb3;
 }
 .crumina-accordion .panel-heading.active .accordion-heading i, .crumina-accordion .panel-heading.active .accordion-heading .woox-icon {
-  transform: rotate(180deg);
-  fill: #000;
+  transform: rotate(0deg) !important;
+  fill: transparent !important;
 }
 .crumina-accordion .panel-heading.active .accordion-heading i.active, .crumina-accordion .panel-heading.active .accordion-heading .woox-icon.active {
   opacity: 1;
@@ -3810,6 +3820,7 @@ select:disabled, .select2:disabled {
   background-color: transparent;
   border: 4px solid #3d434e;
   box-shadow: inset 0 3px 0 0 #00ffb3, 3px 4px 0 0 #000;
+  opacity: 1;
 }
 .accordion--style2 .accordion-panel.active {
   border-color: #3D434F;
@@ -3817,7 +3828,7 @@ select:disabled, .select2:disabled {
 }
 .accordion--style2 .panel-heading.active .accordion-heading .woox-icon {
   transform: rotate(0);
-  opacity: 0;
+  opacity: 1;
 }
 .accordion--style2 .panel-collapse {
   padding: 0 40px 40px;
@@ -5161,7 +5172,7 @@ tbody.collapse.in {
   position: absolute;
   top: -26px;
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, 0) rotate(-0.06rad);
 }
 
 .crumina-pricing-table.paket-pricing:after {
@@ -5179,7 +5190,7 @@ tbody.collapse.in {
   position: absolute;
   top: -26px;
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, 0) rotate(-0.06rad);
 }
 
 .pricing-table--style1 {
