--- a/public/assets/css/theme-styles1.css
+++ b/public/assets/css/theme-styles1.css
@@ -114,7 +114,7 @@ html, body {
 }
 
 body {
-  background-image: url("/assets/img/body-bg.png");
+  /* background-image: url("/assets/img/body-bg.png"); */
   color: #000;
   font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
   font-size: 17px;
@@ -541,11 +541,12 @@ blockquote p {
 @media (max-width: 640px) {
   .list li,
 ul li {
-    font-size: 13px;
+    font-size: 17px;
+    padding-left: 10px;
   }
 
   ol li {
-    font-size: 13px;
+    font-size: 17px;
     padding-left: 20px;
   }
 
@@ -2858,6 +2859,7 @@ td.visible-print {
 .main-content-wrapper {
   position: relative;
   z-index: 2;
+  background-image: url("/assets/img/body-bg.png");
 }
 .main-content-wrapper > .crumina-flying-balls:first-child {
   padding-top: 100px;
@@ -7938,6 +7940,7 @@ button.bg-dark:hover {
   background-color: #00ffb3;
   padding: 10px;
   border: 3px solid;
+  box-shadow: 3px 4px 0 0 #000;
 }
 .bg-green:hover {
   box-shadow: 3px 4px 0 0 #000;
@@ -7947,19 +7950,29 @@ button.bg-dark:hover {
   background-color: #e7e7e7;
   padding: 10px;
   border: 3px solid #000;
+  box-shadow: 3px 4px 0 0 #000;
+}
+
+.bg-gray, .bg.dark {
+  background-color: #e7e7e7;
+  padding: 10px;
+  border: 3px solid #000;
+  box-shadow: 3px 4px 0 0 #00ffb3;
 }
 .bg-abu {
   background-color: #a2a2a2 !important;
   padding: 10px;
+  box-shadow: 3px 4px 0 0 #000;
 }
 .bg-gray:hover {
-  box-shadow: 3px 4px 0 0 #000;
+  box-shadow: 3px 4px 0 0 #00ffb3;
 }
 
 .bg-blue {
   background-color: #8839d8;
   padding: 12px 15px;
   border: 3px solid #8839d8;
+  box-shadow: 3px 4px 0 0 #000;
 }
 .bg-blue:hover {
   box-shadow: 3px 4px 0 0 #000;
@@ -8116,7 +8129,7 @@ h1.uppercase, h2.uppercase, h3.uppercase, h4.uppercase, h5.uppercase, h6.upperca
   font-size: 1.2em;
 }
 #section2 .left h2 {
-  font-size: 3.75em;
+  font-size: 3em;
 }
 @media (max-width: 767px) {
   #section2 {
@@ -8606,6 +8619,7 @@ h1.uppercase, h2.uppercase, h3.uppercase, h4.uppercase, h5.uppercase, h6.upperca
   -webkit-border-radius: 45px;
   border-radius: 0px;
   border: 3px solid;
+  box-shadow: 3px 4px 0 0 #000;
 }
 
 .black {
@@ -8866,6 +8880,12 @@ html {
   scroll-behavior: smooth !important;
 }
 
+@media screen and (max-width: 767px) {
+.container .row {
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+  }
+}
 /* ipad */
 @media (min-width: 768px) {
   .container {
@@ -8887,19 +8907,23 @@ html {
 @media (min-width: 992px) {
   .container {
     width: auto;
-    padding: 0 6rem;
+    padding: 0 2rem;
+  }
+  .intro .intro-inner {
+    position: relative;
+    padding-top: 10vh;
   }
 }
 @media (min-width: 1200px) {
   .container {
     width: auto;
-    padding: 0 8rem;
+    padding: 0 5rem;
   }
 }
 @media (min-width: 1500px) {
   .container {
     width: auto;
-    padding: 0 12rem;
+    padding: 0 8rem;
   }
 }
 
