--- a/public/assets/css/theme-styles1.css
+++ b/public/assets/css/theme-styles1.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*------------- #THEME STYLES --------------*/
+/*------------- #THEME STYLES tesss --------------*/
 /*------------- #TABLE OF CONTENTS --------------*/
 /*------------------------------------------------------------------
 
@@ -377,7 +377,7 @@ blockquote p {
 }
 
 p {
-  margin: 0 0 1.5em 0;
+  margin: 0 0 1rem 0;
 }
 
 ul ul,
