--- a/public/assets/css/blocks.css
+++ b/public/assets/css/blocks.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*------------- #BLOCKS --------------*/
+/*------------- #BLOCKS tesss--------------*/
 /*------------- #VARIABLES --------------*/
 /*------------- #HEADING --------------*/
 .crumina-heading {
@@ -2289,6 +2289,8 @@ input.input--squared, textarea.input--squared, select.input--squared, .select2.i
   border-radius: 0px;
   padding: 14px 14px;
   background-color: #e7e7e7;
+  border: 3px solid black;
+  box-shadow: 3px 4px 0 0 #00ffb3;
 }
 input.input--dark, textarea.input--dark, select.input--dark, .select2.input--dark {
   background-color: #484e5b;
@@ -2547,18 +2549,22 @@ input.input--with-border:focus, textarea.input--with-border:focus, select.input-
   margin: 0;
   font-size: 16px;
   font-weight: 900;
-  color: #a0a9ba;
+  color: #000000;
 }
 
 .form-group.label-floating label.control-label, .form-group.label-placeholder label.control-label {
   top: 10px;
   left: 16px;
+  color: #000000;
 }
 
 .form-group.label-static label.control-label, .form-group.label-floating.is-focused label.control-label, .form-group.label-floating:not(.is-empty) label.control-label {
   top: 10px;
   font-size: 11px;
   line-height: 1.07143;
+  color: #000000;
+  /* border: 3px solid black;
+  box-shadow: 3px 4px 0 0 #00ffb3; */
 }
 
 .form-group.label-floating input.form-control:-webkit-autofill ~ label.control-label label.control-label {
@@ -2566,6 +2572,7 @@ input.input--with-border:focus, textarea.input--with-border:focus, select.input-
   left: 0;
   font-size: 11px;
   line-height: 1.07143;
+  color: #000000;
 }
 
 input.form-control {
@@ -2929,7 +2936,7 @@ select:disabled, .select2:disabled {
   }
 
   .login-form {
-    padding: 20px;
+    padding: .3rem;
   }
 
   .select2, input, select, textarea {
@@ -3757,7 +3764,8 @@ select:disabled, .select2:disabled {
   transition: all 0.3s ease;
 }
 .crumina-accordion .panel-heading.active .accordion-heading .title {
-  color: #00ffb3;
+  color: black;
+  font-weight: bold;
 }
 .crumina-accordion .panel-heading.active .accordion-heading i, .crumina-accordion .panel-heading.active .accordion-heading .woox-icon {
   transform: rotate(0deg) !important;
@@ -4064,7 +4072,7 @@ tbody.collapse.in {
 @media (max-width: 540px) {
   .crumina-accordion .panel-collapse,
 .accordion--style3 .panel-collapse {
-    padding: 0 20px 40px;
+    padding: 10px;
   }
 
   .crumina-accordion .panel-info::before {
@@ -4076,7 +4084,7 @@ tbody.collapse.in {
 .accordion--style2 .accordion-heading,
 .accordion--style3 .accordion-heading,
 .accordion--style5 .accordion-heading {
-    padding: 30px 20px 20px 20px;
+    padding: 30px 10px 20px 10px;
     background: transparent !important;
     box-shadow: inset 0 3px 0 0 #00ffb3, 3px 4px 0 0 #000;
   }
@@ -5177,6 +5185,24 @@ tbody.collapse.in {
 
 .crumina-pricing-table.paket-pricing:after {
   content: "Paket";
+  display: block;
+  font-size: 30px;
+  color: #fff;
+  letter-spacing: 4px;
+  line-height: 1;
+  font-weight: bold;
+  background-color: #8839d8;
+  border-radius: 0px;
+  padding: 10px 15px;
+  text-align: center;
+  position: absolute;
+  top: -26px;
+  left: 50%;
+  transform: translate(-50%, 0) rotate(-0.06rad);
+}
+
+.crumina-pricing-table.extra-pricing:after {
+  content: "Extra";
   display: block;
   font-size: 30px;
   color: #fff;
@@ -7866,7 +7892,7 @@ body.body-overlay-active:before {
   margin-bottom: 15px;
 }
 .blog-details-author p {
-  margin: 0 0 1.5em;
+  margin: 0 0 1em;
 }
 
 /*------------- #POST Standard Details V2 --------------*/
@@ -8403,3 +8429,71 @@ playback timings (ms):
   load_resource: 128.501
   PetaboxLoader3.resolve: 53.7
 */
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 9999;
+  font-size: 20px;
+}
+.loading-text {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+  width: 100%;
+  height: 100px;
+  line-height: 100px;
+}
+.loading-text span {
+  display: inline-block;
+  margin: 0 5px;
+  color: #fff;
+}
+.loading-text span:nth-child(1) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 0s infinite linear alternate;
+}
+.loading-text span:nth-child(2) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 0.2s infinite linear alternate;
+}
+.loading-text span:nth-child(3) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 0.4s infinite linear alternate;
+}
+.loading-text span:nth-child(4) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 0.6s infinite linear alternate;
+}
+.loading-text span:nth-child(5) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 0.8s infinite linear alternate;
+}
+.loading-text span:nth-child(6) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 1s infinite linear alternate;
+}
+.loading-text span:nth-child(7) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 1.2s infinite linear alternate;
+}
+.loading-text span:nth-child(8) {
+  filter: blur(0px);
+  animation: blur-text 1.5s 1.4s infinite linear alternate;
+}
+@keyframes blur-text {
+  0% {
+    filter: blur(0px);
+ }
+  100% {
+    filter: blur(4px);
+ }
+}
