--- a/public/assets/css/blocks3.css
+++ b/public/assets/css/blocks3.css
@@ -114,7 +114,7 @@
 }
 
 .heading-text {
-  margin-top: 20px;
+  margin-top: 12px;
 }
 
 /**
@@ -2270,8 +2270,8 @@ input, textarea, select, .select2 {
   font-size: 16px;
   font-weight: 900;
   color: #666d7a;
-  margin-bottom: 10px;
-  border-radius: 50px;
+  margin-bottom: -6px;
+  border-radius: 00px;
   background-color: #fff;
   box-shadow: 15px 0 40px 5px rgba(61, 67, 79, 0.1);
   width: 100%;
@@ -2576,7 +2576,7 @@ input.input--with-border:focus, textarea.input--with-border:focus, select.input-
 }
 
 input.form-control {
-  padding: 19px 30px;
+  padding: 15px 30px;
 }
 
 select.form-control {
@@ -2932,7 +2932,7 @@ select:disabled, .select2:disabled {
 /*================= Responsive Mode ============*/
 @media (max-width: 768px) {
   .form-group label.control-label {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .login-form {
@@ -2940,7 +2940,7 @@ select:disabled, .select2:disabled {
   }
 
   .select2, input, select, textarea {
-    font-size: 12px;
+    font-size: 18px;
     padding: 10px 20px;
   }
 
@@ -3727,9 +3727,9 @@ select:disabled, .select2:disabled {
   position: relative;
 }
 .accordion-heading .icons .woox-icon {
-  height: 17px;
-  width: 17px;
-  fill: #000 !important;
+  height: 5px;
+  width: 19px;
+  background: #000000;
 }
 
 
@@ -3817,6 +3817,7 @@ select:disabled, .select2:disabled {
 }
 .accordion--style2 .accordion-heading .icons {
   padding-right: 0;
+  color: red;
 }
 .accordion--style2 .accordion-panel {
   background-color: transparent;
@@ -5635,12 +5636,12 @@ table {
   width: 100%;
   max-width: 100%;
   margin-bottom: 20px;
-  border-radius: 30px;
+  border-radius: 00px;
   background-color: #fff;
   text-align: center;
   box-shadow: 15px 0 40px 0 rgba(61, 67, 79, 0.08);
   overflow: hidden;
-  border: none;
+  border: 1px solid black;
 }
 
 table * {
@@ -5657,18 +5658,18 @@ table > tfoot > tr > th,
 table > thead > tr > td,
 table > tbody > tr > td,
 table > tfoot > tr > td {
-  padding: 28px;
+  padding: 18px;
   line-height: 1.42857143;
   vertical-align: middle;
-  border-top: 1px solid #e8edf6;
+  border: 1px solid #000000;
 }
 
 table > tbody > tr > td {
-  border-right: 1px solid #e8edf6;
+  border-right: 1px solid  !important;
 }
 
 table > tbody > tr > td:last-child {
-  border-right: none;
+  border-right: 1px solid;
 }
 
 table > thead > tr > th {
@@ -5685,7 +5686,7 @@ table > thead > tr > th.bg-primary-color {
 }
 
 table > tbody > tr:first-child > td {
-  border-top: none;
+  border: 1px solid black;
 }
 
 table > caption + thead > tr:first-child > th,
@@ -5887,7 +5888,7 @@ table > tfoot > tr > td {
   }
 
   table {
-    border-radius: 10px;
+    border-radius: 0px;
   }
 }
 @media (max-width: 480px) {
@@ -5897,11 +5898,11 @@ table > tfoot > tr > th,
 table > thead > tr > td,
 table > tbody > tr > td,
 table > tfoot > tr > td {
-    padding: 5px;
+    padding: 10px;
   }
 
   table {
-    font-size: 10px;
+    font-size: 14px;
   }
 }
 /*------------- #PORTFOLIO --------------*/
