--- a/public/assets/css/blocks3.css
+++ b/public/assets/css/blocks3.css
@@ -2276,7 +2276,7 @@ input, textarea, select, .select2 {
   box-shadow: 15px 0 40px 5px rgba(61, 67, 79, 0.1);
   width: 100%;
   outline: none;
-  caret-color: #00ffb3;
+  caret-color: #000000;
 }
 input:focus, textarea:focus, select:focus, .select2:focus {
   color: #666d7a;
@@ -3725,10 +3725,11 @@ select:disabled, .select2:disabled {
   transition: all 0.3s ease;
   opacity: 1;
   position: relative;
+  bottom: 3px;
 }
 .accordion-heading .icons .woox-icon {
-  height: 5px;
-  width: 19px;
+  height: 3px;
+  width: 16px;
   background: #000000;
 }
 
@@ -5131,12 +5132,12 @@ tbody.collapse.in {
   font-weight: 400;
 }
 .crumina-pricing-table .price .price-value {
-  font-size: 180px;
+  font-size: 140px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 1;
+  opacity: .8;
   color: black;
 }
 .crumina-pricing-table .price .currency {
@@ -5444,7 +5445,7 @@ tbody.collapse.in {
   visibility: visible;
   opacity: 1;
   overflow: visible;
-  max-height: 600px;
+  max-height: 6000px;
   margin-bottom: 1.5em;
 }
 .pricing-table--style4 .pricing-title {
@@ -8498,3 +8499,5 @@ playback timings (ms):
     filter: blur(10px);
  }
 }
+
+/* yogi */
